# Handmade-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Include/: Actor.h  Camera.h  Engine.h  Math.h  ResourceManager.h  Scene.h  Shader.h
Engine/Source/: Camera.cpp  Engine.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
Game/: CMakeLists.txt
Game/Shaders/: Cube.frag  Cube.vert  Light.vert  Object.frag  Triangle.frag  Triangle.vert
Game/Source/: Cube.h  Main.cpp  Rectangle.h  Triangle.h
breakout/: CMakeLists.txt
breakout/include/: game.h
engine/: CMakeLists.txt
engine/include/: actor.h  camera.h  engine.h  library.h  resource_manager.h  shader.h  texture.h  types.h
engine/source/: camera.cpp  engine.cpp  resource-manager.cpp  resource_manager.cpp  shader.cpp  texture.cpp
engine/test/: CMakeLists.txt
game/: CMakeLists.txt
game/shaders/: cube.frag  cube.vert  triangle_shader.frag  triangle_shader.vert
game/source/: cube.h  main.cpp  rectangle.h  triangle.h
scratches/: rectangle.h
